--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <aside class="benefits">
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="gear with a funnel icon" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -61,7 +61,7 @@
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="bulbe with signal icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
