corrected typo errors in the html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="bulbe with signal icon" />
+            <img src="./assets/images/brand-awareness.png" alt="bulb with signal icon" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
