--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
     </header>
-    <div class="hero" alt="team in a meeting"></div>
+    <section class="hero" alt="team in a meeting"></section>
     <main class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="illustration of search engine optimization " class="float-left" />
@@ -69,7 +69,7 @@
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="gear and money icons" ></img>
+            <img src="./assets/images/cost-management.png" alt="gear and money icons" >
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
