--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <h1>Hori<span class="seo">seo</span>n</h1>
 
         <!-- Top navigation menu starts here -->
-     <nav>
-         <ul>
-            <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
-            <li><a href="#online-reputation-management">Online Reputation Management</a></li>
-            <li><a href="#social-media-marketing">Social Media Marketing</a></li>
-        </ul>
-     </nav>
+        <nav>
+            <ul>
+                <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
+                <li><a href="#online-reputation-management">Online Reputation Management</a></li>
+                <li><a href="#social-media-marketing">Social Media Marketing</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- the main image below the menu -->
@@ -31,7 +31,8 @@
 
         <!-- First section of the main content -->
         <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="illustration of search engine optimization " class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="illustration of search engine optimization "
+                class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -42,10 +43,11 @@
 
         <!-- Second section of the main content -->
         <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="laptop with a graphical representation" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="laptop with a graphical representation"
+                class="float-right" />
             <h2>Online Reputation Management</h2>
 
-        <!-- This is the paragraph for the second section -->
+            <!-- This is the paragraph for the second section -->
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
                 internet connection to say whatever they want about your business. Online Reputation Management gives
@@ -55,10 +57,11 @@
 
         <!-- Third section of the main content -->
         <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="table with social media graphics" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="table with social media graphics"
+                class="float-left" />
             <h2>Social Media Marketing</h2>
 
-        <!-- This is the paragraph for the second section -->
+            <!-- This is the paragraph for the second section -->
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
                 determine which platforms are suited to your brand, using analytics to find the right markets and
@@ -89,7 +92,7 @@
         <!-- Third sidebar section -->
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="gear and money icons" >
+            <img src="./assets/images/cost-management.png" alt="gear and money icons">
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
